tests/invalid/preproc_error.c
#error Build stopped
int main() { return 0; }
